data/collection/fixes/descriptions/scala/scala-2303
See attachment for two instances of the problem, and some workarounds.

```scala
$$ ~/usr/scala-2.7.5.final/bin/scala !$$
~/usr/scala-2.7.5.final/bin/scala ~/Desktop/test.scala

$$ ~/usr/scala-2.8.0.latest/bin/scala ~/Desktop/test.scala
(fragment of test.scala):19: error: recursive value ListFunctor needs type
    def fmap[A, B](r: List[A], f: A => B) = r map f
                                               ^
(fragment of test.scala):22: error: recursive value ListFunctorFMapExplicitReturnType needs type
    def fmap[A, B](r: List[A], f: A => B) = r map f
                                               ^
two errors found
!!!
discarding <script preamble>
!!!
discarding <script preamble>
$$ ~/usr/scala-2.8.0.latest/bin/scala -version
Scala code runner version 2.8.0.r18509-b20090819020207 -- Copyright 2002-2009, LAMP/EPFL
```

Also note the original discussion of this:

http://www.nabble.com/-scala--My-WTF-moment-td19618605.html#a19618605